1-NETWORK-STACK.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Network Stack

Parameters:
  NameTag:
    Type: String
    Default: grupo-01

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${NameTag}-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${NameTag}-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${NameTag}-public-subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: !Sub ${NameTag}-private-subnet

  NatEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub ${NameTag}-nat

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: grupo-01-vpc-id

  PublicSubnet:
    Value: !Ref PublicSubnet
    Export:
      Name: grupo-01-public-subnet

  PrivateSubnet:
    Value: !Ref PrivateSubnet
    Export:
      Name: grupo-01-private-subnet



# NETWORK STACK

# Recursos criados:

# 1 VPC (grupo-01-vpc)
# Rede principal da infraestrutura com CIDR 10.0.0.0/16.

# 1 Internet Gateway (grupo-01-igw)
# Permite comunicação entre recursos públicos da VPC e a internet.

# 1 associação VPC ↔ Internet Gateway
# Conecta o IGW à VPC.

# 1 Public Subnet (grupo-01-public-subnet)
# CIDR 10.0.0.0/24
# Sub-rede para recursos acessíveis externamente.

# 1 Private Subnet (grupo-01-private-subnet)
# CIDR 10.0.1.0/24
# Sub-rede isolada para recursos internos.

# 1 Elastic IP
# IP público fixo usado pelo NAT Gateway.

# 1 NAT Gateway (grupo-01-nat)
# Permite saída para internet da subnet privada sem expor recursos.

# 1 Public Route Table
# Rota:
# 10.0.0.0/16 → local
# 0.0.0.0/0 → Internet Gateway

# 1 Private Route Table
# Rota:
# 10.0.0.0/16 → local
# 0.0.0.0/0 → NAT Gateway

# 2 associações subnet ↔ route table
# Public subnet → public route table
# Private subnet → private route table
